--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"description": "this is for Moonspace builders",
 	"main": "App.js",
 	"scripts": {
+		"start": "parcel index.html",
+		"build": "parcel build index.html",
 		"test": "jest"
 	},
 	"repository": {
@@ -24,5 +26,8 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
-	}
+	},
+	"browserslist": [
+		"last two versions"
+	]
 }
